# packdeps-github

./: Main.hs  README.markdown  example.config  example.yaml  packdeps-github.cabal  stack.yaml
